--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>Personal Profile!</title>
+    <<link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
+    <h1>JOHN ODHIAMBO</h1>
+    <<p>Hello, it is my pleasure to introduce myself to you. My name is John
+    Odhiambo. I was born and raised in the western part of Kenya along <thead>
+      serene shores of lake Victoria where life was easy and fun. My parents where
+      both teachers who made sure we had the best in life.
+    </p>
 
   </body>
 </html>
