--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Personal Profile!</title>
-    <<link rel="stylesheet" type="text/css" href="css/styles.css">
+    <meta charset="utf-8">
+    <title>Personal profile</title>
   </head>
   <body>
-    <h1>JOHN ODHIAMBO</h1>
-    <<p>Hello, it is my pleasure to introduce myself to you. My name is John
-    Odhiambo. I was born and raised in the western part of Kenya along <thead>
-      serene shores of lake Victoria where life was easy and fun. My parents where
-      both teachers who made sure we had the best in life.
-    </p>
+    <h1>John Odhiambo</h1>
+    <p>John Odhiambo is a Kenyan born male. Born and raised in the western part
+    of Kenya along the serene environment of lake victoria. Father to Misiepa
+  and husband to Getrude.</p>
+  <h2>Education</h2>
+  <ul>
+    <li>Kokoth Primary</li>
+    <li>Madungu Primary</li>
+    <li>Homa Bay High</li>
+    <li>KCA</li>    
+  </ul>
+  <h3>Profession</h3>
+  <ol>
+
+  </ol>
 
   </body>
 </html>
