add ol,ordered list

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
     <li>Kokoth Primary</li>
     <li>Madungu Primary</li>
     <li>Homa Bay High</li>
-    <li>KCA</li>    
+    <li>KCA</li>
   </ul>
   <h3>Profession</h3>
   <ol>
+    <li>Platinumstar</li>
+    <li>Malindi</li>
+    <li>Kapsabet</li>
+    <li>Onkel Technics</li>
+    <li>Fleman Ent</li>
 
   </ol>
 
