add em tag to serene

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>John Odhiambo</h1>
     <p>John Odhiambo is a Kenyan born male. Born and raised in the western part
-    of Kenya along the serene environment of lake victoria. Father to Misiepa
+    of Kenya along the <em>serene</em> environment of lake victoria. Father to Misiepa
   and husband to Getrude.</p>
   <h2>Education</h2>
   <ul>
