add strong tag to john odhiambo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>John Odhiambo</h1>
-    <p>John Odhiambo is a Kenyan born male. Born and raised in the western part
+    <p><strong>John Odhiambo</strong> is a Kenyan born male. Born and raised in the western part
     of Kenya along the <em>serene</em> environment of lake victoria. Father to Misiepa
   and husband to Getrude.</p>
   <h2>Education</h2>
