--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>John Odhiambo</h1>
+    <img src="images/babu.jpg" alt="John and Daughter">
     <p><strong>John Odhiambo</strong> is a Kenyan born male. Born and raised in the western part
     of Kenya along the <em>serene</em> environment of lake victoria. Father to Misiepa
   and husband to Getrude.</p>
@@ -25,6 +26,7 @@
     <li>Fleman Ent</li>
 
   </ol>
+  <h3>Interests and Hobbies</h3>
 
   </body>
 </html>
