--- a/index.html
+++ b/index.html
@@ -5,28 +5,36 @@
     <title>Personal profile</title>
   </head>
   <body>
-    <h1>John Odhiambo</h1>
-    <img src="images/babu.jpg" alt="John and Daughter">
+    <!--Container-->
+    <div id="container">
+      <!--header-->
+        <div><h1>John Odhiambo</h1></div>
+    <div><img src="images/babu.jpg" alt="John and Daughter"</div>
+    <!--content area-->
+    <div>
     <p><strong>John Odhiambo</strong> is a Kenyan born male. Born and raised in the western part
     of Kenya along the <em>serene</em> environment of lake victoria. Father to Misiepa
-  and husband to Getrude.</p>
-  <h2>Education</h2>
-  <ul>
-    <li>Kokoth Primary</li>
-    <li>Madungu Primary</li>
-    <li>Homa Bay High</li>
-    <li>KCA</li>
-  </ul>
-  <h3>Profession</h3>
-  <ol>
-    <li>Platinumstar</li>
-    <li>Malindi</li>
-    <li>Kapsabet</li>
-    <li>Onkel Technics</li>
-    <li>Fleman Ent</li>
+  and husband to Getrude.</p></div>
+      <h2>Education</h2>
+      <div>
+        <ul>
+          <li>Kokoth Primary</li>
+          <li>Madungu Primary</li>
+          <li>Homa Bay High</li>
+          <li>KCA</li>
+        </ul>
+        </div>
+        <h3>Profession</h3>
+          <ol>
+            <li>Platinumstar</li>
+            <li>Malindi</li>
+            <li>Kapsabet</li>
+            <li>Onkel Technics</li>
+            <li>Fleman Ent</li>
 
-  </ol>
+          </ol>
   <h3>Interests and Hobbies</h3>
+  <!--footer-->
 
   </body>
 </html>
