add different styles

--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>Personal profile</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"
   </head>
   <body>
-    <!--Container-->
-    <div id="container">
-      <!--header-->
-        <div><h1>John Odhiambo</h1></div>
-    <div><img src="images/babu.jpg" alt="John and Daughter"</div>
-    <!--content area-->
-    <div>
-    <p><strong>John Odhiambo</strong> is a Kenyan born male. Born and raised in the western part
-    of Kenya along the <em>serene</em> environment of lake victoria. Father to Misiepa
-  and husband to Getrude.</p></div>
-      <h2>Education</h2>
-      <div>
-        <ul>
-          <li>Kokoth Primary</li>
-          <li>Madungu Primary</li>
-          <li>Homa Bay High</li>
-          <li>KCA</li>
-        </ul>
-        </div>
-        <h3>Profession</h3>
-          <ol>
-            <li>Platinumstar</li>
-            <li>Malindi</li>
-            <li>Kapsabet</li>
-            <li>Onkel Technics</li>
-            <li>Fleman Ent</li>
+  <h1>John Odhiambo</h1>
+   <img src="images/family.jpg" width="200" height="220" alt="John's family"
 
-          </ol>
-  <h3>Interests and Hobbies</h3>
-  <!--footer-->
+        <h2>About Me</h2>
+
+              <h3>Education:</h3>
+          <p>I succesfully went through the <strong>8-4-4</strong> Kenyan system of
+          education. He has certification in Primary, Secondary and tertiary
+          education.</p>
+
+              <h3>Profession:</h3>
+          <p>Started as computer technician, later moved to printing and
+          distributing promotional materials. Worked as a game dealer
+        in one of the Kenya's leading Casinos. To date I runs
+      a private entity dealing in managing trucks in and around Nairobi.</p>
+
+              <h3>Interests and Hobbies:</h3>
+            <p>John likes swiming, Offroad driving, Playing lawn Tennis
+            and game watching</p>
+            <h2>Goals and Aspirations</h2>
+            <ul>
+              <li>Healthy self</li>
+              <li>Healthy family</li>
+              <li>Love for God</li>
+              <li>Help the needy</li>
+              <li>Succesfull business legacy</li>
+            </ul>
+            <h2>Favourite site</h2>
+            <ol>
+                <li>DIY<a href="https://diy.com"</li>
+                <li>HowStuffWorks<a href="http://howstuffworks.com"</li>
+                <li>Google<a href="https://google.co.ke"</li>
+
+            </ol>
 
   </body>
 </html>
