add page borders and resize margins

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <h1>John Odhiambo</h1>
-   <img src="images/family.jpg" width="200" height="220" alt="John's family"
+   <img src="images/family.jpg" width="200" height="220" alt="John's family">
 
         <h2>About Me</h2>
 
@@ -22,7 +22,7 @@
       a private entity dealing in managing trucks in and around Nairobi.</p>
 
               <h3>Interests and Hobbies:</h3>
-            <p>John likes swiming, Offroad driving, Playing lawn Tennis
+            <p>John likes swiming, <span>Classic cars restoration,</span> Offroad driving, Playing lawn Tennis
             and game watching</p>
             <h2>Goals and Aspirations</h2>
             <ul>
@@ -34,11 +34,12 @@
             </ul>
             <h2>Favourite site</h2>
             <ol>
-                <li>DIY<a href="https://diy.com"</li>
-                <li>HowStuffWorks<a href="http://howstuffworks.com"</li>
-                <li>Google<a href="https://google.co.ke"</li>
-
+                <li><a href="https://diy.com" target="_blank">DIY</li>
+                <li><a href="http://howstuffworks.com" target="_blank">howstuffworks</li>
+                <li><a href="https://google.co.ke" target="_blank">Google</li>
             </ol>
+
+                
 
   </body>
 </html>
